removed global locks